--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,10 @@
 
   "autoload": {
 
-    "classmap": [
-
-      "./"
-
-    ]
+    "psr-4" : {
+      "App\\" : "App/",
+      "Core\\" : "Core/"
+    }
 
   }
 
