--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,10 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /MVC/index.php?path=$1 [NC,L,QSA]
+RewriteRule ^(.*)$ index.php?path=$1 [NC,L,QSA]
+
+#RewriteEngine on
+#RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-l
+#RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
